# todai

./: .gitignore  CLAUDE.md  Cargo.toml  Cross.toml  DEPLOY.md  PLAN.md
.cargo/: config.toml
agent/: README.md  pyproject.toml  requirements.txt
agent/todai_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  prompts.py
agent/todai_agent/notifiers/: __init__.py  base.py  factory.py  home_assistant.py  print_notifier.py
agent/todai_agent/providers/: __init__.py  anthropic_provider.py  base.py  factory.py
src/: cli.rs  config.rs  context.rs  main.rs  store.rs  time_util.rs  todo.rs
src/commands/: add.rs  archive.rs  done.rs  edit.rs  init.rs  list.rs  mod.rs  notified.rs  show.rs  snooze.rs  today.rs
