[project]
name = "todai-agent"
version = "0.1.0"
description = "AI agentic loop for the todai todo system. Runs on the Raspberry Pi."
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
]

[project.scripts]
todai-agent = "todai_agent.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["todai_agent*"]
